# steins-gate

./: CMakeLists.txt  CreateClipTexture.nss  CreateSound.nss  CreateText.nss  Fade.nss  Phone.nss  README.md  SetShade.nss  nsbtest.sh  test.nss
cmake/Modules/: FindGStreamer.cmake  FindNPA.cmake  FindNPENGINE.cmake  get-git-revision.cmake
src/: Main.cpp  Phone.cpp  Phone.hpp  PhoneMode.hpp  PhoneModeAddressBook.cpp  PhoneModeAddressBook.hpp  PhoneModeDefaultOperatable.cpp  PhoneModeDefaultOperatable.hpp  PhoneModeMailMenu.cpp  PhoneModeMailMenu.hpp  PhoneModeReceivingMail.cpp  PhoneModeReceivingMail.hpp  PhoneModeSendMailEdit.cpp  PhoneModeSendMailEdit.hpp  PhoneSD.cpp  PhoneSD.hpp  SGExe.cpp  SGExe.hpp  SGInterpreter.cpp  SGInterpreter.hpp  SGResourceMgr.cpp  SGResourceMgr.hpp  SGWindow.cpp  SGWindow.hpp  version.hpp.in
tests/: Array.nss  CreateChoice.nss  CreateColor.nss  CreateEffect.nss  CreateMovie.nss  CreateName.nss  CreateProcess.nss  CreateRenderTextureUNK.nss  CreateScrollbar.nss  CreateSound.nss  CreateStencil.nss  CreateText.nss  CreateTexture.nss  CreateWindow.nss  Delete.nss  DrawTransition.nss  Fade.nss  If.nss  Message.nss  ModAssign.nss  Move.nss  Request.nss  Rotate.nss  Save.nss  SetAchievement.nss  SetAlias.nss  SetPrio.nss  SetShortcut.nss  SetTone.nss  Shake.nss  StartAtch.nss  UNK187.nss  VariableValue.nss  WaitPlay.nss  Zoom.nss  libtest.nss
